Simplify QUIC Packet generation.